Rewriting to avoid non-Java-8 methods