@@ -1,6 +1,7 @@
 package jnetcall.java.tests.io;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.javatuples.Pair;
@@ -22,8 +23,8 @@ public final class FileTransportTest extends TransportTest {
     @Override
     protected Pair<ISendTransport, ISendTransport> getBoth() {
         int offset = getNextOffset();
-        Path first = Path.of(Folder, 13001 + offset + "");
-        Path second = Path.of(Folder, 13051 + offset + "");
+        Path first = Paths.get(Folder, 13001 + offset + "");
+        Path second = Paths.get(Folder, 13051 + offset + "");
         ThreadExecutor exe = new ThreadExecutor();
         FolderTransport left = new FolderTransport(
                 Encoding,
