@@ -3,10 +3,12 @@ package jnethotel.java.windows;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import com.sun.jna.Native;
 import com.sun.jna.NativeLibrary;
 
+import jnetbase.java.compat.J8;
 import jnethotel.java.api.ICoreClr;
 import jnethotel.java.api.IVmRef;
 import jnethotel.java.windows.impl.nethost_library_windows;
@@ -26,11 +28,11 @@ public final class WinVmRef implements IVmRef {
     @Override
     public void loadLib() throws IOException {
         String libFileName = getVmDll();
-        Path libRoot = Path.of("C:\\Program Files\\dotnet");
-        String libPath = Files.find(libRoot, 7,
+        Path libRoot = Paths.get("C:\\Program Files\\dotnet");
+        String libPath = J8.orElseThrow(Files.find(libRoot, 7,
                         (p, b) -> p.getFileName().toString().equals(libFileName) &&
                                 p.getParent().toString().contains("-x64"))
-                .findFirst().orElseThrow().getParent().toString();
+                .findFirst()).getParent().toString();
         System.setProperty("jna.library.path", libPath);
 
         final String jnaLibraryName = "nethost";
